--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,9 @@ jobs:
       - checkout
       - run: pwd && ls 
       - run: go install
+      - run: nethelp -v
+      - run: nethelp --cloud rdc
+      - run: nethelp --cloud vdc
+      - run: nethelp --dc na
+      - run: nethelp --dc eu
       - run: nethelp
